--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,12 @@
-spring.profiles.active=test
+server.port=8081
+spring.profiles.active=${APP_PROFILE:test}
 
 spring.jpa.open-in-view=false
+
+cors.origins=${CORS_ORIGINS:https://devsuperior.com.br,http://localhost:8080}
+
+security.oauth2.client.client-id=${CLIENT_ID:myclientid}
+security.oauth2.client.client-secret=${CLIENT_SECRET:mysecret123}
+
+jwt.secret=${JWT_SECRET:MY-JWT-SECRET}
+jwt.duration=${JWT_DURATION:86400}
